--- a/public/index.html
+++ b/public/index.html
@@ -131,9 +131,9 @@
                                         </div>
                                     </a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#"><svg xmlns=" http://www.w3.org/2000/svg" width="32"
-                                            height="32" fill="currentColor" class="bi bi-chat-left-text"
+                                <li class="nav-item" style="display: flex;">
+                                    <a class="nav-link" id="caht" href="#"><svg xmlns=" http://www.w3.org/2000/svg"
+                                            width="47" height="47" fill="currentColor" class="bi bi-chat-left-text"
                                             viewBox="0 0 16 16">
                                             <path
                                                 d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
@@ -145,7 +145,12 @@
                                     <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button"
                                         data-bs-toggle="dropdown" aria-expanded="false">
 
-                                        <img src="https://dft5bbbk1fziz.cloudfront.net/img/icons/member.png">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="47" height="47"
+                                            fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                                            <path fill-rule="evenodd"
+                                                d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+                                        </svg>
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                         <li><a class="dropdown-item dropdown-sign" href="/sign.html"
@@ -433,7 +438,9 @@
 
 
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap&v=weekly" async></script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXg0bmVrXJ6hF8Nq5voQG6TbA5UQFha7k&callback=initMap&v=weekly"
+        async></script>
 
 
 
@@ -883,14 +890,38 @@
 
 
 
-                    console.log('host_newparticipant_${user.id}', `host_newparticipant_${user.id}`)
+                    console.log('host_newParticipant_${user.id}', `host_newParticipant_${user.id}`)
 
-                    socket.on(`host_newparticipant_${user.id}`, message => {
+                    socket.on(`host_addParticipant_${user.id}`, message => {
                         console.log('message', message)
 
 
                         Swal.fire({
                             title: `${message.participantName} 剛加入您的 ${message.gatheringTitle} 活動`,
+                            position: 'bottom-end',
+                            showClass: {
+
+                                popup: 'animate__animated animate__fadeIn'
+                            },
+
+                            timer: 5500,
+                            hideClass: {
+                                popup: 'animate__animated animate__fadeOutUp'
+                            },
+                            backdrop: false,
+                        })
+
+                    })
+
+
+
+
+                    socket.on(`host_removeParticipant_${user.id}`, message => {
+                        console.log('message', message)
+
+
+                        Swal.fire({
+                            title: `${message.participantName} 剛加退出您的 ${message.gatheringTitle} 活動`,
                             position: 'bottom-end',
                             showClass: {
 
