--- a/public/profile.html
+++ b/public/profile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/header_footer.css">
 
 
@@ -35,23 +35,31 @@
     <div class='wrap'>
 
 
-        <!-- ---------------------- header --------------------------- -->
-        <div id="header">
-            <nav class="navbar navbar-light fixed-top navbar-expand-lg" style="background-color: #e3f2fd;">
-                <div class="container-md" style="width: 83%; max-width: 90%;">
 
-                    <a class=" navbar-brand logo name" href="./index.html">
-                        <img src="./assets/logo5.png" alt="" width="230" height="60">
+        <!-- ---------------------- header --------------------------- -->
+        <!-- #e3f2fd; -->
+        <div id="header" style="position: absolute;">
+            <nav class="navbar navbar-light fixed-top navbar-expand-lg"
+                style="background-color: rgba(255, 255, 255); padding:0%; padding-top: 5px">
+                <div class="container-md" style="width: 90%; max-width: 90%; height:60px">
+
+                    <a class="navbar-brand logo name" href="./index.html">
+                        <img src="./assets/new_logo2.png" alt="" height="35">
                     </a>
                     <div id="main-header">
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <ul class="navbar-nav" style="align-items: center;">
 
-                                <li class="nav-item" style="margin: 3px 10px 0 0;" data-bs-toggle="offcanvas"
+
+                                <li class="nav-item" style="margin: 0 0 0 0;" data-bs-toggle="offcanvas"
                                     data-bs-target="#offcanvasWithBackdrop" aria-controls="offcanvasWithBackdrop">
-                                    <a class="nav-link" href="#">
-                                        <img src="./assets/6590582_box_email_mail_mailbox_icon.png"
-                                            style="width: 36px;">
+                                    <a class="nav-link" href="#" style="display: flex;">
+                                        <!-- <img src="./assets/6590582_box_email_mail_mailbox_icon.png"
+                                            style="width: 36px;"> -->
+
+                                        <span class="material-icons">
+                                            all_inbox
+                                        </span>
                                     </a>
                                 </li>
                                 <!-- <li class="nav-item" style="display: flex;">
@@ -64,9 +72,9 @@
                                                 d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
                                         </svg></a>
                                 </li> -->
-                                <li class="nav-item dropdown">
+                                <li class="nav-item dropdown" style="margin: 0 0 0 0;">
                                     <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button"
-                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        data-bs-toggle="dropdown" aria-expanded="false" style="display: flex;">
 
                                         <!-- <svg xmlns="http://www.w3.org/2000/svg" width="47" height="47"
                                             fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
@@ -74,10 +82,14 @@
                                             <path fill-rule="evenodd"
                                                 d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
                                         </svg> -->
-                                        <img src="./assets/3018530_buyer_customer_figure_person_portrait_icon.png"
-                                            style="width: 36px;">
+                                        <!-- <img src="./assets/3018530_buyer_customer_figure_person_portrait_icon.png"
+                                            style="width: 36px;"> -->
+                                        <span class="material-icons">
+                                            account_circle
+                                        </span>
                                     </a>
-                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                    <ul class="dropdown-menu dropdown-menu-lg-end"
+                                        aria-labelledby="navbarDropdownMenuLink">
                                         <li><a class="dropdown-item dropdown-sign" href="/sign.html"
                                                 style="display: block;">登入</a>
                                         </li>
@@ -103,6 +115,7 @@
 
         <div id="left">
 
+
             <div id=profileList>
 
 
@@ -114,7 +127,7 @@
 
 
                 <div class="rating-box" style="position:relative; width: 100%;">
-                    <h5 class="rating-boxH1" style="text-align: center;">評分</h5>
+                    <h5 class="rating-boxH1" style="text-align: center;">我的評分</h5>
                     <div class="ratingResult" style="text-align: center;">
                         <span class="fa fa-star-o" style="font-size:36px; color: gold;"></span>
                         <span class="fa fa-star-o" style="font-size:36px; color: gold;"></span>
@@ -504,6 +517,8 @@
             profileList.class = "card"
             profileList.style = "width:60%;"
             console.log('profileData.data.picture', profileData.data.picture)
+
+
 
             let profilePic = document.createElement('img')
             profilePic.src = profileData.data.picture || '';
